Get tasks from sheet an show in table

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,17 @@
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-{% include head.html %}
+  {% include head.html %}
 
-<body>
+    <body>
 
-    {% include header.html %}
+        {% include header.html %}
 
-    {{ content }}
+        {{ content }}
 
-</body>
+        {% include table.html %}
+
+        {% include footer.html %}
+
+    </body>
 </html>
