--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href='https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css' media="screen">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
 
     <script src="jquery-3.1.1.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
     <!-- Google Authorization -->
     <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
     <script src="https://apis.google.com/js/client.js"></script>
