Add many things... styling for table, jqueryUI, expanding on click, and few more things.

--- a/_includes/table.html
+++ b/_includes/table.html
@@ -1,13 +1,13 @@
-<table id="agreements" style="display: none">
+<table id="acuerdos" style="display: none">
     <thead>
         <tr>
-            <th>#</th>
-            <th>Responsable</th>
-            <th>Decisión</th>
-            <th>Fecha</th>
-            <th>Email</th>
-            <th>Urgencia</th>
-            <th>Comentarios</th>
+            <th class="identificador">#</th>
+            <th class="responsable" alt="Responsable">Resp.</th>
+            <th class="decision">Decisión</th>
+            <th class="fecha">Fecha</th>
+            <th class="email">Email</th>
+            <th class="urgencia" alt="Urgencia">Urg.</th>
+            <th class="comentarios">Comentarios</th>
         </tr>
     </thead>
     <tbody>
