--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" type="text/css" href='https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css' media="screen">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/table.css" media="screen">
 
-    <script src="jquery-3.1.1.min.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
     <!-- Google Authorization -->
     <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
     <script src="https://apis.google.com/js/client.js"></script>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
 </head>
