--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/table.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/acuerdo-modal.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/jquery.modal.min.css" media="screen" />
 
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+    <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="js/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="js/jquery.modal.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js" type="text/javascript"></script>
     <!-- Google Authorization -->
     <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
-    <script src="https://apis.google.com/js/client.js"></script>
+    <script src="https://apis.google.com/js/client.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
 </head>
