Modificada la forma en que se conecta a Google. Pagina de edicion de acuerdo añadida, falta guardar cambios.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/table.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/acuerdo-modal.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/jquery.modal.min.css" media="screen" />
 
     <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
@@ -19,5 +20,7 @@
     <!-- Google Authorization -->
     <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
     <script src="https://apis.google.com/js/client.js" type="text/javascript"></script>
-    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/Conexion.js" type="text/javascript"></script>
+    <script src="js/Acuerdo.js" type="text/javascript"></script>
+    <script src="js/Responsable.js" type="text/javascript"></script>
 </head>
